--- a/popup.html
+++ b/popup.html
@@ -23,10 +23,26 @@
         }
 
         .instructions {
-            margin-top: 15px;
+            margin: 15px 0;
             color: #666;
             font-size: 14px;
             line-height: 1.4;
+            text-align: left;
+        }
+
+        .settings-button {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 8px 16px;
+            background: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 14px;
+        }
+
+        .settings-button:hover {
+            background: #0056b3;
         }
     </style>
 </head>
@@ -42,7 +58,9 @@
             3. Enter your prompt<br>
             4. See the AI-suggested changes
         </div>
+        <a href="#" id="openOptions" class="settings-button">⚙️ Settings</a>
     </div>
+    <script src="popup.js"></script>
 </body>
 
 </html>
