--- a/popup.html
+++ b/popup.html
@@ -3,205 +3,20 @@
 
 <head>
     <title>AI Text Editor</title>
-    <style>
-        body {
-            width: 600px;
-            height: 600px;
-            margin: 0;
-            padding: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            gap: 15px;
-        }
-
-        .editor-section {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            min-height: 0;
-        }
-
-        .text-container {
-            flex: 1;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 15px;
-            overflow-y: auto;
-            background: #fff;
-        }
-
-        .text-line {
-            display: flex;
-            align-items: flex-start;
-            gap: 10px;
-            padding: 5px 0;
-            border-bottom: 1px solid #eee;
-        }
-
-        .text-content {
-            flex: 1;
-            white-space: pre-wrap;
-            font-family: monospace;
-            line-height: 1.4;
-        }
-
-        .deleted {
-            background-color: rgba(255, 0, 0, 0.2);
-            text-decoration: line-through;
-            color: #666;
-        }
-
-        .added {
-            background-color: rgba(0, 255, 0, 0.2);
-        }
-
-        .approve-button {
-            padding: 2px 8px;
-            background: #28a745;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 12px;
-        }
-
-        .approve-button:disabled {
-            background: #aaa;
-            cursor: not-allowed;
-        }
-
-        .prompt-section {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .prompt-input {
-            width: 100%;
-            height: 80px;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            resize: none;
-            font-family: inherit;
-        }
-
-        .button-row {
-            display: flex;
-            gap: 10px;
-            justify-content: flex-end;
-        }
-
-        .send-button,
-        .apply-button {
-            padding: 8px 16px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: 500;
-        }
-
-        .send-button {
-            background: #007bff;
-            color: white;
-        }
-
-        .apply-button {
-            background: #28a745;
-            color: white;
-        }
-
-        .send-button:hover {
-            background: #0056b3;
-        }
-
-        .apply-button:hover {
-            background: #218838;
-        }
-
-        .conversation-history {
-            margin-top: 10px;
-            padding: 10px;
-            background: #f8f9fa;
-            border-radius: 4px;
-            max-height: 150px;
-            overflow-y: auto;
-        }
-
-        .history-item {
-            margin-bottom: 8px;
-            padding: 8px;
-            background: white;
-            border-radius: 4px;
-            border: 1px solid #eee;
-        }
-
-        .history-prompt {
-            color: #666;
-            font-size: 0.9em;
-        }
-
-        .loading {
-            display: none;
-            text-align: center;
-            color: #666;
-            padding: 10px;
-        }
-
-        .status {
-            display: none;
-            padding: 8px;
-            border-radius: 4px;
-            margin-top: 10px;
-            text-align: center;
-        }
-
-        .status.error {
-            background: #f8d7da;
-            color: #721c24;
-        }
-
-        .status.success {
-            background: #d4edda;
-            color: #155724;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <div class="editor-section">
-            <div class="text-container" id="textContainer">
-                <!-- Text lines will be inserted here -->
-            </div>
-        </div>
-
-        <div class="prompt-section">
-            <textarea class="prompt-input" id="promptInput" placeholder="Enter your editing instructions..."></textarea>
-
-            <div class="button-row">
-                <button class="send-button" id="sendButton">Send to AI</button>
-                <button class="apply-button" id="applyButton">Apply Changes</button>
-            </div>
-        </div>
-
-        <div class="loading" id="loading">
-            Processing...
-        </div>
-
-        <div class="status" id="status"></div>
-
-        <div class="conversation-history" id="conversationHistory">
-            <!-- Conversation history will be inserted here -->
-        </div>
+    <div class="popup-container">
+        <h3>AI Text Editor</h3>
+        <p class="instructions">
+            To use the editor:
+        <ol>
+            <li>Select text on the page.</li>
+            <li>Press <strong>Cmd+K</strong> (Mac) or <strong>Ctrl+K</strong> (Windows/Linux).</li>
+        </ol>
+        </p>
+        <button id="openOptionsButton" class="options-button">Settings</button>
     </div>
     <script src="popup.js"></script>
 </body>
